News UAT/force-app/main/default/objects/Map_Orchestrator_Process__mdt/Map_Orchestrator_Process__mdt.object-meta.xml
<CustomObject>
    <label>Map Orchestrator Process</label>
    <pluralLabel>Map Orchestrator Processes</pluralLabel>
</CustomObject>