News UAT/force-app/main/default/objects/Map_Orchestrator_Process__mdt/fields/Key_Process_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Key_Process_Identifier__c</fullName>
    <label>Key Process Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>