News UAT/force-app/main/default/objects/Map_Orchestrator_Process__mdt/fields/Orchestrator_Process_Template_s__c.field-meta.xml
<CustomField>
    <fullName>Orchestrator_Process_Template_s__c</fullName>
    <description>Comma separated list of all Orchestrator Processes trigger to setup this product</description>
    <label>Orchestrator Process Template(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>