News UAT/force-app/main/default/objects/Map_Orchestrator_Process__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Unchanged</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Amendments</fullName>
                <isActive>false</isActive>
                <label>Amendments</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>