News UAT/force-app/main/default/objects/Map_Orchestrator_Process__mdt/listViews/All_Elements.listView-meta.xml
<ListView>
    <fullName>All_Elements</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Key_Process_Identifier__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Orchestrator_Process_Template_s__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Elements</label>
</ListView>